[gd_scene load_steps=2 format=2]

[ext_resource path="res://weapons/BaseWeapon.gd" type="Script" id=2]

[node name="BaseWeapon" type="Node2D" groups=["weapons"]]
script = ExtResource( 2 )

[node name="Cooldown" type="Timer" parent="."]

[node name="Range" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="Muzzle" type="Position2D" parent="."]

[connection signal="timeout" from="Cooldown" to="." method="_on_Cooldown_timeout"]
[connection signal="body_entered" from="Range" to="." method="_on_Range_body_entered"]
